force-app/main/default/objects/Sales_Assistant_Store__c/Sales_Assistant_Store__c.object-meta.xml
<CustomObject>
    <label>Sales Assistant Store</label>
    <nameField>
        <displayFormat>SASTORE-{0000000000}</displayFormat>
        <label>Autonumber</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Assistant Store</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>