force-app/main/default/objects/Sales_Assistant_Store__c/fields/Sales_Assistant__c.field-meta.xml
<CustomField>
    <fullName>Sales_Assistant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Assistant</label>
    <referenceTo>Sales_Assistant__c</referenceTo>
    <relationshipLabel>Sales Assistant Store</relationshipLabel>
    <relationshipName>Sales_Assistant_Store</relationshipName>
    <type>Lookup</type>
</CustomField>