force-app/main/default/objects/Sales_Assistant_Store__c/fields/Store__c.field-meta.xml
<CustomField>
    <fullName>Store__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Store</label>
    <referenceTo>Store__c</referenceTo>
    <relationshipLabel>Sales Assistant Store</relationshipLabel>
    <relationshipName>Sales_Assistant_Store</relationshipName>
    <type>Lookup</type>
</CustomField>