force-app/main/default/objects/Sales_Assistant_Store__c/fields/Store_Sales_Assistant__c.field-meta.xml
<CustomField>
    <fullName>Store_Sales_Assistant__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>unique identifier</inlineHelpText>
    <label>Store Sales Assistant</label>
    <length>200</length>
    <type>Text</type>
</CustomField>